--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE>
+<html>
+  <head>
+    <title>This is a Jenksin Testing from Blueocean.</title>
+  </head>
+<body>
 <strong>Hello World</strong>
+</body>
+</html>
