--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE>
-<html>
-  <head>
+<!DOCTYPE html>
+<head>
     <title>This is a Jenksin Testing from Blueocean.</title>
   </head>
 <body>
