--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<head>
-    <title>This is a Jenksin Testing from Blueocean.</title>
+<!doctype html>
+<html>
+  <head>
+    <title>Static HTML Site</title>
   </head>
-<body>
-<strong>Hello World</strong>
-</body>
+  <body>
+    <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>JavaScript</script>.</p>
+  </body>
 </html>
